--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,156 +1,288 @@
-html {
-    width: 1370px;
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+@media only screen and (max-width: 640px) {
+    html, body {
+        height: calc(100%-2em);
+        margin: 0;
+    }
+    body {
+        background-color: mediumslateblue;
+        font-family: 'Barlow', sans-serif;
+    }
+    #menu {
+        width: 40px;
+        cursor: pointer;
+    }
+    aside {
+        color: white;
+        display: grid !important;
+        grid-template-columns: auto 40px;
+        padding: 2em;
+    }
+    .active {
+            position: absolute;
+            display: block !important;
+            background: white;
+            width: 50%;
+            left: 0;
+            top: 0;
+            height: 100%;
+    }
+    ul {
+        display: none !important;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: .8em;
+        display: block;
+        padding: 1.5em 3em;
+        background-color: rgba (255, 255, 255, .35);
+        color: black;
+    }
+    .container {
+        background: white;
+        padding: 1em 1.4em;
+        display: block !important;
+    }
+    img {
+        width: 100%; 
+    }
+    header {
+        font-family: 'Anton', sans-serif;
+        font-size: 18px !important;
+    }
+    .form {
+        display: block;
+        width: 50%;
+    }
 }
 
-body {
-    background: white;
-    width: 960px;
-    margin: auto !important;
-    height: 700px;
-}
+@media only screen and (max-width: 768px) {
+    html, body {
+        height: calc(100%-2em);
+        margin: 0;
+    }
 
-.container {
-    width: 960px;
-    margin: auto !important;
-    background-color: white;
-    height: 500px;
-}
+    body {
+        background-color: mediumslateblue;
+        font-family: 'Barlow', sans-serif;
+    }
 
-nav {
-    width: 960px;
-    margin: auto;
-    background-color: white;
-    color: black;
-    height: 100px !important;
-    display: flex !important;
-    border-bottom: 3px solid #833ab4;
-}
+    #menu {
+        width: 40px;
+        cursor: pointer;
+    }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 75px 5px 10px 0;
-    align-content: flex-end !important;
-    margin-bottom: 0px;
+    aside {
+        color: white;
+        display: grid !important;
+        grid-template-columns: auto 40px;
+        padding: 2em;
+    }
+
+    .active {
+            position: absolute;
+            display: block !important;
+            background: white;
+            width: 50%;
+            left: 0;
+            top: 0;
+            height: 100%;
+        }
+    /* nav {
+        background: white;
+    } */
+    ul {
+        display: none !important;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    
+    ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: .8em;
+        display: block;
+        padding: 1.5em 3em;
+        background-color: rgba (255, 255, 255, .35);
+        color: black;
+    }
+    .container {
+        background: white;
+        padding: 1em 1.4em;
+        display: grid;
+        grid-template-columns: 40% auto;
+        padding: 2em;
+        width: 67%;
+        margin: auto;
+        clear: both;
+    }
+    img {
+        width: 67%;
+        display: flex;
+    }
+    header {
+        font-family: 'Anton', sans-serif;
+        font-size: 28px;
+    }
+    .form {
+        display: block;
+        width: 50%;
+    }
+}
+@media only screen and (max-width: 980px) {
+    html, body {
+        height: calc(100%-2em);
+        margin: 0;
+    }
+
+    body {
+        background-color: mediumslateblue;
+        font-family: 'Barlow', sans-serif;
+    }
+
+    #menu {
+        width: 40px;
+        cursor: pointer;
+    }
+
+    aside {
+        color: white;
+        display: grid !important;
+        grid-template-columns: auto 40px;
+        padding: 2em;
+    }
+
+    .active {
+            position: absolute;
+            display: block !important;
+            background: white;
+            width: 50%;
+            left: 0;
+            top: 0;
+            height: 100%;
+        }
+    ul {
+        display: none !important;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+        
+    ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: .8em;
+        display: block;
+        padding: 1.5em 3em;
+        background-color: rgba (255, 255, 255, .35);
+        color: black;
+    }
+    .container {
+        background: white;
+        padding: 1em 1.4em;
+        display: grid;
+        grid-template-columns: 40% auto;
+        padding: 2em;
+        width: 67%;
+        margin: auto;
+        clear: both;
+    }
+
+    img {
+    width: 67%; 
     display: flex;
-    padding-left: 500px;
-    font-family: 'Barlow', sans-serif;
+    }
+
+    header {
+        font-family: 'Anton', sans-serif;
+    }
+    .form {
+        display: block;
+        width: 33%;
+    }
 }
 
-li {
-    display: flex;
-    flex-direction: row-reverse;
-}
+@media only screen and (min-width: 980px) {
+    body {
+        background-color: mediumslateblue;
+        font-family: 'Barlow', sans-serif;
+    }
 
-li a:default {
-    color: black;
-}
+    html, body {
+        height: calc(100%-2em);
+        margin: auto;
+    }
 
-li a:hover {
-    background-color: white;
-  }
+    #menu {
+        display: none;
+    }
 
+    aside {
+            color: white;
+            grid-template-columns: auto 40px;
+            padding: 2em 12em;
+        }
 
-#logo {
-    width: 200px;
-    height: 100px;
-    background: #833ab4;
-    text-align: center;
-    position: relative;
-    left: 170px;
-    line-height: 75%;
-}
+    .active {
+            display: none;
+        }
 
-header {
-    font-size: 28px;
-    color: white;
-    text-align: center;
-    font-family: 'Anton', sans-serif;
-    padding-top: 65px;
-}
+    nav {
+        background: mediumslateblue;
+    }
 
-#about-me {
-    background-color: white;
-    width: 65%;
-    margin: auto;
-    weight: bold;
-    font-size: 24px;
-    font-family: 'Anton', sans-serif;
-    padding: 10px;
-}
-
-hr {
-    width: 65%;
-    margin: auto;
-}
-
-main {
-    width: 65%;
-    margin: auto;
-    display: flex;
-    font-family: 'Anton', sans-serif;
-}
-
-img {
-    width: 200px;
-    height: 270px;
-    padding-right: 10px;
-    flex-shrink: 1;
-}
-
-#p1 {
-    background-color: white;
-    width: 100%;
-    flex-grow: 2;
-    font-family: 'Barlow', sans-serif;
-    font-size: 16px;
-}
-
-form {
-    margin: auto;
-    width: 65%;
-}
-
-button {
-    background-color: rgba(252,176,69,1);
-    color: black;
-    box-shadow: 3px orange;
-}
-
-.images {
-    width: 50%;
-    margin: auto;
-}
-
-.centered {
-    position: absolute;
-    top: 80%;
-    left: 47%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    height: 40px;
-    width: 18rem;  
-    text-align: center;
-    font-family: 'Barlow', sans-serif;
-}
-
-.centered1 {
-    position: absolute;
-    top: 80%;
-    left: 47%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    height: 40px;
-    width: 18rem;  
-    text-align: center;
-    font-family: 'Barlow', sans-serif;
+    ul {
+        display: flex;
+        list-style-type: none;
+        margin: auto;
+        padding: 0;
+    }
+        
+    ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: .8em;
+        display: block;
+        padding:.5em;
+        background-color: rgba (255, 255, 255, .35);
+        color: black;
+    }
+    .container {
+        background: white;
+        display: grid;
+        grid-template-columns: 40% auto;
+        padding: 2em;
+        width: 67%;
+        margin: auto;
+        clear: both;
+    }
+    img {
+        width: 75%; 
+        display: flex;
+        flex: left;
+    }
+    header {
+        font-family: 'Anton', sans-serif;
+        font-size: 28px;
+    }
+    p {
+        margin-top: 45px;
+    }
+    main {
+        background: white;
+        padding: 2em;
+        width: 67%;
+        margin: auto;   
+    }
+    .form {
+        display: block;
+        width: 95%;
+    }
 
 }
 
-.grid {
-    padding: 40px 0 40px 0;
-    margin: auto;
-    width: 65%;
-}
+
